project migrated to plain html

--- a/dashboard.html
+++ b/dashboard.html
@@ -5,13 +5,14 @@
             InFund - Where a start happens
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="{{ URL::asset('css/style.css') }}">
+        <link rel="icon" href="img/favicon.ico" type="favicon">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     </head>
     <body>
         <nav class="infund-nav infund-dashboard-nav infund-dashboard-in-nav">
-            <a href="/" class="infund-nav-logo">
-                <img src="{{ URL::asset('img/web_assets/infund-header-logo.png') }}" height="42">
+            <a href="landingpage.html" class="infund-nav-logo">
+                <img src="img/web_assets/infund-header-logo.png" height="42">
             </a>
             <form>
                 <input class="infund-signup-textbox infund-dashboard-search" type="text" placeholder="Search..">
@@ -19,7 +20,7 @@
             </form>
             <label for="profileExpandTrigger" class="infund-nav-item-container">
                 <div style="width: 30px; height: 30px; padding: 0; border-radius: 50%; overflow: hidden;">
-                    <img src="{{ URL::asset('img/web_assets/anonymous/profile_male.jpg') }}" style="width: 30px; height: 30px;">
+                    <img src="img/web_assets/anonymous/profile_male.jpg" style="width: 30px; height: 30px;">
                 </div>
                 <a id="profileExpandMenu">Agustinus Theodorus</a>
             </label>
@@ -31,13 +32,13 @@
         </nav>
         <input id="profileExpandTrigger" type="checkbox">
         <nav class="infund-expand-nav">
-            <a href="/profile">
+            <a href="profile.html">
                 Profile
             </a>
-            <a href="/settings">
+            <a href="settings.html">
                 Settings
             </a>
-            <a href="/">
+            <a href="landingpage.html">
                 Sign Out
             </a>
         </nav>
@@ -49,17 +50,17 @@
             </form>
             <div class="infund-nav-item-container">
                 <div style="width: 30px; height: 30px; padding: 0; border-radius: 50%; overflow: hidden;">
-                    <img src="{{ URL::asset('img/web_assets/anonymous/profile_male.jpg') }}" style="width: 30px; height: 30px;">
+                    <img src="img/web_assets/anonymous/profile_male.jpg" style="width: 30px; height: 30px;">
                 </div>
                 <a>Agustinus Theodorus</a>
             </div>
-            <a href="/profile">
+            <a href="profile.html">
                 Profile
             </a>
-            <a href="/settings">
+            <a href="settings.html">
                 Settings
             </a>
-            <a href="/">
+            <a href="landingpage.html">
                 Sign Out
             </a>
         </nav>
