--- a/landingpage.html
+++ b/landingpage.html
@@ -5,28 +5,29 @@
             InFund - Where a start happens
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="{{ URL::asset('css/style.css') }}">
+        <link rel="icon" href="img/favicon.ico" type="favicon">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     </head>
     <body>
         <nav class="infund-landing-scroll-nav infund-nav">
-            <a href="/" class="infund-nav-logo">
-                <img src="{{ URL::asset('img/web_assets/infund-header-logo.png') }}" height="42">
+            <a href="landingpage.html" class="infund-nav-logo">
+                <img src="img/web_assets//infund-header-logo.png" height="42">
             </a>
             <div class="infund-nav-item-container">
                 <a>Sign In</a>
-                <a href="/signup">Sign Up</a>
+                <a href="signup.html">Sign Up</a>
             </div>
         </nav>
 
         <header class="infund-landing">
             <div class="infund-nav infund-landing-nav">
-                <a href="/" class="infund-nav-logo">
-                    <img src="{{ URL::asset('img/web_assets/infund-header-logo.png') }}" height="42">
+                <a href="landingpage.html" class="infund-nav-logo">
+                    <img src="img/web_assets/infund-header-logo.png" height="42">
                 </a>
                 <div class="infund-nav-item-container">
                     <a class="infund-signin-form-show">Sign In</a>
-                    <a href="/signup">Sign Up</a>
+                    <a href="signup.html">Sign Up</a>
                 </div>
             </div>
             <div class="infund-landing-desc">
@@ -122,9 +123,9 @@
                     <label for="password">Password</label>
                     <input class="infund-signup-textbox" type="password" placeholder="Enter your password..">
                 </div>
-                <input class="infund-button infund-signup-button" type="button" value="Sign In">
-                <a href="/forgot">Forgot Password?</a>
-                <a href="/signup">Don't have InFund account? Sign Up</a>
+                <input class="infund-button infund-signup-button" onclick="javascript:window.location='dashboard.html'" type="button" value="Sign In">
+                <a href="forgot.html">Forgot Password?</a>
+                <a href="signup.html">Don't have InFund account? Sign Up</a>
             </div>
         </form>
     </body>
