--- a/profile.html
+++ b/profile.html
@@ -5,21 +5,22 @@
             InFund - Where a start happens
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="{{ URL::asset('css/style.css') }}">
+        <link rel="icon" href="img/favicon.ico" type="favicon">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     </head>
     <body>
         <nav class="infund-nav infund-dashboard-nav">
-            <a href="/" class="infund-nav-logo">
-                <img src="{{ URL::asset('img/web_assets/infund-header-logo.png') }}" height="42">
+            <a href="landingpage.html" class="infund-nav-logo">
+                <img src="img/web_assets/infund-header-logo.png" height="42">
             </a>
-            <a class="infund-backto-dashboard" href="/dashboard">Back to Dashboard</a>
+            <a class="infund-backto-dashboard" href="dashboard.html">Back to Dashboard</a>
         </nav>
 
         <main>
             <div class="infund-profile-home">
                 <div class="infund-profile">
-                    <img src="{{ URL::asset('img/web_assets/anonymous/profile_male.jpg') }}">
+                    <img src="img/web_assets/anonymous/profile_male.jpg">
                 </div>
                 <h1>Agustinus Theodorus</h1>
             </div>
