--- a/signin.html
+++ b/signin.html
@@ -5,16 +5,17 @@
             InFund - Where a start happens
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="{{ URL::asset('css/style.css') }}">
+        <link rel="icon" href="img/favicon.ico" type="favicon">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <nav class="infund-nav infund-signup-nav">
-            <a href="/" class="infund-nav-logo">
-                <img src="{{ URL::asset('img/web_assets/infund-header-logo.png') }}" height="42">
+            <a href="landingpage.html" class="infund-nav-logo">
+                <img src="img/web_assets/infund-header-logo.png" height="42">
             </a>
             <div class="infund-nav-item-container">
-                <a href="/signin">Sign In</a>
-                <a href="/signup">Sign Up</a>
+                <a href="signin.html">Sign In</a>
+                <a href="signup.html">Sign Up</a>
             </div>
         </nav>
 
@@ -30,9 +31,9 @@
                         <label for="password">Password</label>
                         <input class="infund-signup-textbox" type="password" placeholder="Enter your password..">
                     </div>
-                    <input class="infund-button infund-signup-button" type="button" value="Sign In">
-                    <a href="/forgot">Forgot Password?</a>
-                    <a href="/signup">Don't have InFund account? Sign Up</a>
+                    <input class="infund-button infund-signup-button" type="button" onclick="javascript:window.location='dashboard.html'" value="Sign In">
+                    <a href="forgot.html">Forgot Password?</a>
+                    <a href="signup.html">Don't have InFund account? Sign Up</a>
                 </div>
             </form>
         </main>
