--- a/reset.html
+++ b/reset.html
@@ -5,15 +5,16 @@
             InFund - Where a start happens
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" type="text/css" href="{{ URL::asset('css/style.css') }}">
+        <link rel="icon" href="img/favicon.ico" type="favicon">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
         <nav class="infund-nav">
-            <a href="/" class="infund-nav-logo">
-                <img src="{{ URL::asset('img/web_assets/infund-header-logo.png') }}" height="42">
+            <a href="landingpage.html" class="infund-nav-logo">
+                <img src="img/web_assets/infund-header-logo.png" height="42">
             </a>
             <div class="infund-nav-item-container">
-                <a href="/signin">Back to Sign In</a>
+                <a href="signin.html">Back to Sign In</a>
             </div>
         </nav>
 
