--- a/viewall.html
+++ b/viewall.html
@@ -32,14 +32,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -53,14 +50,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -74,14 +68,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -95,14 +86,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -116,14 +104,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -137,14 +122,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -158,14 +140,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -179,14 +158,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -200,14 +176,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -221,14 +194,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -242,14 +212,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -263,14 +230,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -284,14 +248,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                         <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
