--- a/dashboard.html
+++ b/dashboard.html
@@ -67,12 +67,21 @@
 
         <main class="infund-dashboard-main">
             <h2>Upload Your Proposal</h2>
-            <label for="uploadFile" class="infund-dashboard-upload">
+            <a href="uploadproposal.html" class="infund-dashboard-upload">
                 <div>
                     <i class="fas fa-file-upload fa-5x"></i>
                 </div>
                 <input id="uploadFile" type="file" style="position: absolute; opacity: 0;">
-            </label>
+            </a>
+            <div class="infund-tutorial-container" id="audioTrigger">
+                <div class="infund-sound-tutorial-button">
+                    <i class="fas fa-volume-down fa-1x"></i>
+                </div>
+                <div>
+                    Play Page Tutorial
+                </div>
+                <audio id="audio" src="audio/Dashboard (online-audio-converter.com).mp3"></audio>
+            </div>
             <h2>Your Projects</h2>
             <div class="infund-dashboard-proposals">
                 <div>
@@ -86,14 +95,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                          <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -112,14 +118,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                          <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -133,14 +136,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                          <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -154,14 +154,11 @@
                             <i class="fas fa-ellipsis-v"></i>
                         </span>
                          <div class="infund-proposal-hover-options">
-                            <a>
+                            <a href="proposal.html">
                                 View
                             </a>
-                            <a>
+                            <a href="proposal.html">
                                 Donate
-                            </a>
-                            <a>
-                                Blabla
                             </a>
                         </div>
                     </div>
@@ -176,5 +173,28 @@
                 </div>
             </div>
         </footer>
+
+        <script>
+            let audio = document.getElementById("audio");
+            let volumeIcon = document.getElementById('audioTrigger').getElementsByClassName('fa-volume-down')[0];
+            document.getElementById('audioTrigger').onclick = function(){
+                let volumeIcon = this.getElementsByClassName('fa-volume-down')[0];
+                volumeIcon.classList.remove("fa-volume-down");
+                volumeIcon.classList.add("fa-volume-up");
+                
+                let audio = document.getElementById("audio");
+                audio.play();
+            }
+            audio.addEventListener("ended", function(){
+                volumeIcon.classList.remove("fa-volume-up");
+                volumeIcon.classList.add("fa-volume-down");
+            });
+            let search = document.getElementsByClassName('infund-dashboard-search');
+            for(let i = 0; i < search.length; i++){
+                search[i].onclick = function(){
+                    window.location.href = "viewall.html";
+                }
+            }
+        </script>
     </body>
 </html>
