--- a/profile.html
+++ b/profile.html
@@ -40,14 +40,11 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </span>
                             <div class="infund-proposal-hover-options">
-                                <a>
+                                <a href="proposal.html">
                                     View
                                 </a>
-                                <a>
+                                <a href="proposal.html">
                                     Donate
-                                </a>
-                                <a>
-                                    Blabla
                                 </a>
                             </div>
                         </div>
@@ -67,14 +64,11 @@
                                 <i class="fas fa-ellipsis-v"></i>
                             </span>
                             <div class="infund-proposal-hover-options">
-                                <a>
+                                <a href="proposal.html">
                                     View
                                 </a>
-                                <a>
+                                <a href="proposal.html">
                                     Donate
-                                </a>
-                                <a>
-                                    Blabla
                                 </a>
                             </div>
                         </div>
