--- a/signin.html
+++ b/signin.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="img/favicon.ico" type="favicon">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
     </head>
     <body>
         <nav class="infund-nav infund-signup-nav">
@@ -34,6 +35,15 @@
                     <input class="infund-button infund-signup-button" type="button" onclick="javascript:window.location='dashboard.html'" value="Sign In">
                     <a href="forgot.html">Forgot Password?</a>
                     <a href="signup.html">Don't have InFund account? Sign Up</a>
+                    <div class="infund-tutorial-container" id="audioTrigger">
+                        <div class="infund-sound-tutorial-button">
+                            <i class="fas fa-volume-down fa-1x"></i>
+                        </div>
+                        <div>
+                            Play Page Tutorial
+                        </div>
+                        <audio id="audio" src="audio/Sign-In (online-audio-converter.com).mp3"></audio>
+                    </div>
                 </div>
             </form>
         </main>
@@ -45,5 +55,22 @@
                 </div>
             </div>
         </footer>
+
+    <script>
+        let audio = document.getElementById("audio");
+        let volumeIcon = document.getElementById('audioTrigger').getElementsByClassName('fa-volume-down')[0];
+        document.getElementById('audioTrigger').onclick = function(){
+            let volumeIcon = this.getElementsByClassName('fa-volume-down')[0];
+            volumeIcon.classList.remove("fa-volume-down");
+            volumeIcon.classList.add("fa-volume-up");
+            
+            let audio = document.getElementById("audio");
+            audio.play();
+        }
+        audio.addEventListener("ended", function(){
+            volumeIcon.classList.remove("fa-volume-up");
+            volumeIcon.classList.add("fa-volume-down");
+        });
+    </script>
     </body>
 </html>
