--- a/reset.html
+++ b/reset.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="img/favicon.ico" type="favicon">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     </head>
     <body>
         <nav class="infund-nav">
