--- a/signup.html
+++ b/signup.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="img/favicon.ico" type="favicon">
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
     </head>
     <body>
         <nav class="infund-nav infund-signup-nav">
@@ -126,7 +127,7 @@
                     <label for="uploadFile">Click me to choose a file</label>
                     <div style="display: flex;">
                         <input class="infund-button infund-signup-button infund-signup-back-button" type="button" value="Back">
-                        <input class="infund-button infund-signup-button" type="button" value="Finish">
+                        <input class="infund-button infund-signup-button" id="finishSignUp" type="button" value="Finish">
                     </div>
                 </div>
                 <input id="uploadFile" type="file" style="position: absolute; opacity: 0;">
@@ -165,5 +166,8 @@
                 $('#signUpForm').css("transform", "translateX(" + (count - 1) * 20 * -1 + "%)");
             });
         });
+        document.getElementById("finishSignUp").onclick = function(){
+            window.location.href = "dashboard.html";
+        }
     </script>
 </html>
